--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AJM Store | Dashboard</title>
   </head>
-  <body class="bg-white font-inter text-black dark:text-white dark:bg-black">
+  <body
+    class="bg-[#F1F2F4] font-inter text-black dark:text-white dark:bg-black"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
